# Online-Retail-Clustering

./: .gitignore  EDA.ipynb  README.md  Spark_Customer_Analysis.ipynb  data_fetch.py  pyproject.toml
