[project]
name = "projet-spark"
version = "0.1.0"
description = "An Online Retail analysis project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "kaggle>=1.8.3",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pyspark>=4.1.1",
]
